# toolchain_build

./: .gitignore  Makefile.in  all  all-4.10  all-4.8  all-4.9  all-5.0  all-linux  and-makefiles-aarch64  and-makefiles-arm  arm-androideabi  arm-androideabi-4.10  arm-androideabi-4.7  arm-androideabi-4.8  arm-androideabi-4.9  arm-androideabi-5.0  arm-eabi  arm-eabi-4.10  arm-eabi-4.7  arm-eabi-4.8  arm-eabi-4.9  arm-eabi-5.0  build-failed  build-success  cloog-failed  config.sub  configure  configure.ac  i686-linux-android-4.8  saber-host-linux  saber-linux-i686  saber-linux-i686-4.8  saber-linux-x86_64  saber-linux-x86_64-4.8  saber-linux-x86_64-4.9  x86_64-linux-android-4.9
